cmake_minimum_required(VERSION 3.23)
project(CP5609-Lab2)

set(CMAKE_CXX_STANDARD 14)

add_executable(CP5609-Lab2 WallH.h BoardObjectH.h VladPackManGame.cpp VladPackManGame.h PlayerH.h Wall.cpp Player.cpp ListBoardObjectsH.h Cookie.cpp CookieH.h ListBoardObejcts.cpp BoardH.h Board.cpp VectorBoardObjects.cpp VectorBoardObjectsH.h Monster.cpp Monster.h Bomb.cpp Bomb.h)
